# msc-app

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-compose.yml.example
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/v1/: assets.py  audit.py  backup.py  capec.py  changelog.py  config.py  cpe.py  cwe.py  events.py  inventory.py  license_policies.py  malware.py  notifications.py  routes.py  saved_searches.py  scans.py  stats.py  status.py  sync.py  vulnerabilities.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: mongo.py  opensearch.py
backend/app/mcp/: audit.py  auth.py  oauth.py  oauth_providers.py  security.py  server.py
backend/app/mcp/tools/: assets.py  cpe.py  cwe_capec.py  scans.py  stats.py  vulnerabilities.py
backend/app/models/: __init__.py  capec.py  cwe.py  inventory_item.py  kev.py  license_policy.py  malware_intel.py  scan.py  vulnerability.py
backend/app/repositories/: __init__.py  asset_repository.py  capec_repository.py  cpe_repository.py  cwe_repository.py  ingestion_log_repository.py  ingestion_state_repository.py  inventory_repository.py  kev_repository.py  license_policy_repository.py  malware_intel_repository.py  notification_rule_repository.py  saved_search_repository.py  scan_finding_repository.py  scan_layer_repository.py  scan_repository.py  scan_sbom_repository.py  scan_target_repository.py  vulnerability_repository.py
backend/app/schemas/: _utc.py  ai.py  assets.py  attack_path.py  audit.py  backup.py  capec.py  changelog.py  cpe.py  cwe.py  inventory.py  license_policy.py  malware.py  notification.py  saved_search.py  scan.py  scan_attack_chain.py  sync.py  vex.py  vulnerability.py
backend/app/services/: ai_service.py  asset_catalog_service.py  attack_chain_stages.py  attack_path_service.py  audit_service.py  backup_service.py  capec_service.py  changelog_service.py  cpe_service.py  cwe_service.py  event_bus.py  inventory_matcher.py  inventory_service.py  license_compliance_service.py  notification_service.py  saved_search_service.py  sbom_export.py  scan_attack_chain_service.py  scan_parser.py  scan_service.py  stats_service.py  sync_service.py  vex_service.py  vulnerability_service.py
backend/app/services/http/: rate_limiter.py  retry.py  ssl.py
backend/app/utils/: request.py  strings.py
docs/: architecture.md
scanner/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
scanner/app/: hecate_analyzer.py  main.py  malware_intel_refresh.py  models.py  provenance.py  scanners.py
scanner/app/malware_detector/: __init__.py  cicd_analysis.py  hash_matching.py  install_hooks.py  known_compromised.py  persistence.py  popular_packages.py  pth_files.py  rules.py  sandbox_evasion.py  sarif_formatter.py  suspicious_patterns.py  typosquatting.py  unicode_obfuscation.py  utils.py  worm_detection.py
(+125 files in other folders)
