[tool.poetry]
name = "hecate-backend"
version = "0.1.0"
description = "FastAPI backend for the Hecate cyber defense platform."
authors = ["Hecate Team <devnull@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
motor = "^3.3.1"
opensearch-py = "^2.5.0"
httpx = "^0.27.0"
structlog = "^24.1.0"
python-dateutil = "^2.9.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
