[tool.poetry]
name = "hecate-backend"
version = "0.1.0"
description = "FastAPI backend for the Hecate cyber defense platform."
authors = ["Hecate Team <devnull@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.128.5"
uvicorn = "0.40.0"
pydantic = "^2.12"
pydantic-settings = "^2.11.0"
motor = "^3.7"
opensearch-py = "^3.0.0"
httpx = "^0.28.1"
structlog = "^25.5.0"
python-dateutil = "^2.9.0"
apscheduler = "^3.11.1"
google-genai = "^1.49.0"
starlette = "0.52.1"
opensearch-protobufs = "1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "^1.2.0"
ruff = "0.15.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
